# MarsAgent

./: .gitignore  AGENTS.md  Makefile  README.md
.github/workflows/: ci.yml
.playwright-mcp/: page-2026-06-09T09-59-29-088Z.yml  page-2026-06-09T10-01-36-841Z.yml
apps/agents/: .dockerignore  Dockerfile  pyproject.toml
apps/agents/marsagent/: __init__.py  config.py  llm.py  main.py
apps/agents/marsagent/builder/: author.py  codeeng.py  graph.py  planner.py  prompts.py  quiz.py  state.py  validator.py
apps/agents/marsagent/builder/tasks/: build.py
apps/agents/marsagent/collector/: arxiv_adapter.py  base.py  chunker.py  dedup.py  doc_adapter.py  github_adapter.py  playwright_adapter.py  storage.py  summarizer.py  tavily_adapter.py
apps/agents/marsagent/collector/tasks/: collect.py
apps/agents/marsagent/grpcs/: server.py
apps/agents/marsagent/rag/: qdrant.py
apps/agents/marsagent/sandbox/: pool.py
apps/agents/marsagent/sandbox/images/: python_with_libs.Dockerfile
apps/agents/marsagent/stream/: consumer.py  progress.py
apps/agents/marsagent/tasks/: echo.py
apps/agents/tests/: test_chunker.py  test_collect_drafts.py  test_config.py  test_course_build_chain.py  test_dedup.py  test_echo_task.py  test_grpc_hello.py  test_llm.py  test_sandbox_pool.py  test_stream_retry.py  test_validator.py
apps/gateway/: .dockerignore  Dockerfile  go.mod  go.sum
apps/web/: Dockerfile  index.html  package-lock.json  package.json  playwright.config.ts  (+2 more)
infra/: .env.example  docker-compose.dev.yml  docker-compose.yml
proto/: wiki.proto
scripts/: gen-proto.sh
(+62 files in other folders)
