[project]
name = "marsagent"
version = "0.1.0"
description = "MarsAgent Python worker — collectors + 5-agent builder"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.115.0",
  "uvicorn[standard]==0.30.6",
  "redis==5.0.8",
  "pydantic==2.9.2",
  "pydantic-settings==2.5.2",
  "grpcio==1.66.1",
  "grpcio-tools==1.66.1",
  "httpx==0.27.2",
  "structlog==24.4.0",
  "tavily-python==0.3.4",
  "arxiv==2.1.2",
  "PyGithub==2.4.1",
  "playwright==1.48.0",
  "simhash==2.1.2",
  "sentence-transformers==3.0.1",
  "minio==4.0.17",
  "qdrant-client==1.12.1",
  "httpx-sse==0.4.0",
  "anthropic==0.40.0",
  "langgraph==0.2.50",
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.3",
  "pytest-asyncio==0.24.0",
  "pytest-cov==5.0.0",
  "ruff==0.6.8",
  "mypy==1.11.2",
  "testcontainers[redis]==4.8.1",
  "playwright==1.48.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["marsagent*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
